1. Метод .of [#458534]